# eventure

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: Cargo.toml
examples/src/: lib.rs
examples/src/getting-started/: main.rs
examples/src/in_memory/: main.rs
examples/src/in_memory_async/: main.rs
examples/src/in_memory_multi_threaded/: main.rs
examples/src/in_memory_sync/: main.rs
examples/src/inmemory_async/: main.rs
examples/src/inmemory_sync/: main.rs
examples/src/kafka/: main.rs
examples/src/kafka_many_handlers/: main.rs
examples/src/shared/: common.rs  mod.rs  order_canceled.rs  order_created.rs
sdk/: Cargo.toml
sdk/src/: common.rs  iggy.rs  in_memory.rs  in_memory_async.rs  in_memory_sync.rs  inmemory_sync.rs  kafka.rs  lib.rs  macros.rs  model.rs
sdk/src/common/: utils.rs
sdk/src/iggy/: implementation.rs
sdk/src/in_memory/: implementation.rs  internals.rs
sdk/src/kafka/: implementation.rs
src/: abstraction.rs  inmemory_sync.rs  lib.rs  macros.rs  main.rs  model.rs
tests/: integration_test.rs  order_canceled.rs  order_created.rs
tools/iggy/: docker-compose.yaml
tools/kafka/: docker-compose.yaml
