[package]
name = "eventure-examples"
version = "0.0.3"
edition = "2021"

[[example]]
name = "in-memory-sync"
path = "src/in_memory_sync/main.rs"

[[example]]
name = "in-memory-async"
path = "src/in_memory_async/main.rs"

[[example]]
name = "kafka"
path = "src/kafka/main.rs"

[dependencies]
eventure = { path = "../sdk" }
uuid = { version = "1.8.0", features = ["v4"] }
