[package]
name = "examples"
version = "0.0.15"
edition = "2021"

[[example]]
name = "getting-started"
path = "src/getting-started/main.rs"

[[example]]
name = "in-memory"
path = "src/in_memory/main.rs"

[[example]]
name = "in-memory-multi-threaded"
path = "src/in_memory_multi_threaded/main.rs"

[[example]]
name = "kafka"
path = "src/kafka/main.rs"

[[example]]
name = "kafka-many-handlers"
path = "src/kafka_many_handlers/main.rs"

[dependencies]
eventure = { path = "../sdk" }
uuid = { version = "1.8.0", features = ["v4"] }
colored = "2.1.0"
simple_logger = { version = "5.0.0", features = ["threads"] }
log = "0.4.21"
serde = "1.0.200"
serde_json = "1.0.116"
time = "0.3.36"
typetag = "0.2.16"
mopa = "0.2.2"
mop = "0.5.0"
