[package]
name = "eventure"
description = "Event-Driven messaging library for Rust"
repository = "https://github.com/rust-lang-libs/eventure"
readme = "../README.md"
version = "0.0.11"
edition = "2021"
license = "MIT"

[dependencies]
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4"] }
colored = "2.1.0"
log = "0.4.21"
rdkafka = "0.36.2"
tokio = "1.37.0"
clap = "4.5.4"
