[package]
name = "eventure"
description = "Event-Driven messaging library for Rust"
authors = ["Piotr Marat <pmarat.dev@gmail.com>"]
documentation = "https://docs.rs/eventure"
repository = "https://github.com/rust-lang-libs/eventure"
categories = ["api-bindings"]
keywords = ["api", "events", "event-driven"]
readme = "../README.md"
version = "0.0.17"
edition = "2021"
license = "MIT"

[dependencies]
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4"] }
colored = "2.1.0"
log = "0.4.21"
rdkafka = "0.36.2"
clap = "4.5.4"
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
smol = "2.0.0"
futures = "0.3.30"
typetag = "0.2.16"
mopa = "0.2.2"
